hydroflow_plus/src/snapshots/hydroflow_plus__persist_pullup__tests__persist_pullup_through_map@surface_graph_0.snap
---
source: hydroflow_plus/src/persist_pullup.rs
expression: graph.surface_syntax_string()
---
1v1 = source_iter ({ use crate :: __staged :: persist_pullup :: tests :: * ; 0 .. 10 });
2v1 = map ({ use crate :: __staged :: persist_pullup :: tests :: * ; | v | v + 1 });
3v1 = persist ();
4v1 = for_each ({ use crate :: __staged :: persist_pullup :: tests :: * ; | n | println ! ("{}" , n) });

1v1 -> 2v1;
2v1 -> 3v1;
3v1 -> 4v1;
